--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -9,13 +9,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 23:16+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: pixbox <pixbox@live.de>\n"
+"Last-Translator: Koivo <koivo@hdfreaks.cc>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 2.2\n"
 
 msgid "N"
 msgstr "N"
@@ -595,7 +595,9 @@ msgid "This option activate/deactive/change the background transparency of skin.
 msgstr "Diese Option aktiviert/deaktiviert/ändert die Hintergrundtransparenz im Skin."
 
 msgid "This option activate/deactive/change the weather on top inside the infobar."
-msgstr "Diese Option aktiviert/deaktiviert/ändert die Wetteranzeige in der oberen Hälfte der Infobar."
+msgstr ""
+"Diese Option aktiviert/deaktiviert/ändert die Wetteranzeige in der oberen Hälfte der Infobar.\n"
+"Der Standort wird automatisch erkannt und verwendet."
 
 msgid "Here you can insert your city, district, zip code or alltogether."
 msgstr "Hier wird deine Stadt, Ortsteil, PLZ oder bunt gemischt eingetragen."
