fix weather location via ip and id

--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -599,8 +599,12 @@ msgstr ""
 "Diese Option aktiviert/deaktiviert/ändert die Wetteranzeige in der oberen Hälfte der Infobar.\n"
 "Der Standort wird automatisch erkannt und verwendet."
 
-msgid "Here you can insert your city, district, zip code or alltogether."
-msgstr "Hier wird deine Stadt, Ortsteil, PLZ oder bunt gemischt eingetragen."
+msgid ""
+"Here you can insert your city, district, zip code or alltogether.\n"
+"Leave blank to automatically detect your location via the IP adress."
+msgstr ""
+"Hier wird deine Stadt, Ortsteil, PLZ oder bunt gemischt eingetragen.\n"
+"Für eine automatische Erkennung vom Standort einfach leer lassen."
 
 msgid "Here you can change how often the weather is refreshed in the background."
 msgstr "An dieser Stelle wird der Intervall der Wetteraktualisierung im Hintergrund eingestellt."
