add poster option for infobar part 2

--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.3\n"
 
 msgid "N"
 msgstr "N"
@@ -588,8 +588,12 @@ msgstr "Diese Option aktiviert den scrollenden Text an einigen Stellen im Skin."
 msgid "This option activates the scrollbars for some parts of skin."
 msgstr "Diese Option aktiviert den Scrollbalken an einigen Stellen im Skin."
 
-msgid "This option activates the channelname within the infobar."
-msgstr "Diese Option aktiviert die Anzeige vom Sendernamen in der Infobar."
+msgid ""
+"This option activates the channelname within the infobar.\n"
+"For using Poster, you need a drive as HDD to save the pictures."
+msgstr ""
+"Diese Option aktiviert die Anzeige vom Sendernamen in der Infobar.\n"
+"Für die Verwendung von Poster benötigen Sie ein Laufwerk als HDD, um die Bilder zu speichern."
 
 msgid "This option activate/deactive/change the background transparency of skin."
 msgstr "Diese Option aktiviert/deaktiviert/ändert die Hintergrundtransparenz im Skin."
