change description for weather id

--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.4.2\n"
 
 msgid "N"
 msgstr "N"
@@ -605,10 +605,12 @@ msgstr ""
 
 msgid ""
 "Here you can insert your city, district, zip code or alltogether.\n"
-"Leave blank to automatically detect your location via the IP adress."
+"Leave blank to automatically detect your location via the IP adress.\n"
+"Press OK to insert your location manually."
 msgstr ""
 "Hier wird deine Stadt, Ortsteil, PLZ oder bunt gemischt eingetragen.\n"
-"Für eine automatische Erkennung vom Standort einfach leer lassen."
+"Für eine automatische Erkennung vom Standort einfach leer lassen.\n"
+"Für einen manuellen Eintrag auf OK drücken."
 
 msgid "Here you can change how often the weather is refreshed in the background."
 msgstr "An dieser Stelle wird der Intervall der Wetteraktualisierung im Hintergrund eingestellt."
