--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -13,9 +13,9 @@ msgstr ""
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0.1\n"
+"X-Generator: Poedit 3.0\n"
 
 msgid "N"
 msgstr "N"
@@ -66,7 +66,7 @@ msgid "N-NW"
 msgstr "N-NW"
 
 msgid ", feels "
-msgstr ", gefühlt "
+msgstr ", gefÃ¼hlt "
 
 msgid "N/A"
 msgstr "N/A"
@@ -188,7 +188,7 @@ msgid "Smoky"
 msgstr "Rauchig"
 
 msgid "Blustery"
-msgstr "Stürmisch"
+msgstr "StÃ¼rmisch"
 
 msgid "Windy"
 msgstr "Windig"
@@ -202,12 +202,12 @@ msgstr "Wolkig"
 msgid ""
 "Mostly\n"
 " cloudy"
-msgstr "Ãœberwiegend bewölkt"
+msgstr "Ãœberwiegend bewÃ¶lkt"
 
 msgid ""
 "Partly\n"
 " cloudy"
-msgstr "Teilweise bewölkt"
+msgstr "Teilweise bewÃ¶lkt"
 
 msgid "Clear"
 msgstr "Klar"
@@ -266,7 +266,7 @@ msgstr "% Luftfeuchtigkeit"
 msgid ""
 "Not\n"
 " available"
-msgstr "Nicht verfügbar"
+msgstr "Nicht verfÃ¼gbar"
 
 msgid "openHDF"
 msgstr "openHDF"
@@ -344,13 +344,13 @@ msgid "Grey dark"
 msgstr "Dunkel Grau"
 
 msgid "Green"
-msgstr "Grün"
+msgstr "GrÃ¼n"
 
 msgid "Green dark"
-msgstr "Dunkelgrün"
+msgstr "DunkelgrÃ¼n"
 
 msgid "Neon green"
-msgstr "Neongrün"
+msgstr "NeongrÃ¼n"
 
 msgid "Neon yellow"
 msgstr "Neongelb"
@@ -431,13 +431,13 @@ msgid "Small cover"
 msgstr "Kleines Cover"
 
 msgid "Big cover"
-msgstr "Großes Cover"
+msgstr "GroÃŸes Cover"
 
 msgid "Very big cover"
-msgstr "Sehr großes Cover"
+msgstr "Sehr groÃŸes Cover"
 
 msgid "List big cover"
-msgstr "Liste und großŸes Cover"
+msgstr "Liste und groÃŸes Cover"
 
 msgid "On"
 msgstr "An"
@@ -452,7 +452,7 @@ msgid "_____________________________ Weather _________________________________"
 msgstr "_____________________________ Wetter __________________________________"
 
 msgid "Big"
-msgstr "Groß"
+msgstr "GroÃŸ"
 
 msgid "Slim"
 msgstr "Schmal"
@@ -479,7 +479,7 @@ msgid "Running text"
 msgstr "Laufschrift - Running Text"
 
 msgid "Skinmode"
-msgstr "Skin Auflösung"
+msgstr "Skin AuflÃ¶sung"
 
 msgid "Background transparency"
 msgstr "Hintergrund Transparenz"
@@ -512,13 +512,13 @@ msgid "Listselection border"
 msgstr "Auswahlbalken Rahmen"
 
 msgid "Progress-/Volumebar"
-msgstr "Fortschritts-/Lautstärkebalken"
+msgstr "Fortschritts-/LautstÃ¤rkebalken"
 
 msgid "Primary font"
 msgstr "Hauptschrift / Sendung Jetzt"
 
 msgid "Secondary font"
-msgstr "Sekundärschrift"
+msgstr "SekundÃ¤rschrift"
 
 msgid "Listselection font"
 msgstr "Auswahlbalken Schriftfarbe"
@@ -568,10 +568,10 @@ msgstr "Fehler beim Erstellen des Skin!"
 msgid ""
 "GUI needs a restart to apply a new skin.\n"
 "Do you want to Restart the GUI now?"
-msgstr "Enigma2 muss neu gestartet werden um die Ã„nderungen zu übernehmen. Soll jetzt neu gestartet werden?"
+msgstr "Enigma2 muss neu gestartet werden um die Ã„nderungen zu Ã¼bernehmen. Soll jetzt neu gestartet werden?"
 
 msgid "Configuration tool for XionHDF"
-msgstr "Konfigurationstool für XionHDF"
+msgstr "Konfigurationstool fÃ¼r XionHDF"
 
 msgid "clock with weekday"
 msgstr "Uhr mit Wochentag"
@@ -580,7 +580,7 @@ msgid "Refresh interval (in minutes)"
 msgstr "Aktualisierungsintervall (in Minuten)"
 
 msgid "This option set the resolution of skin."
-msgstr "Diese Option stellt die Auflösung des Skins ein."
+msgstr "Diese Option stellt die AuflÃ¶sung des Skins ein."
 
 msgid "This option activates the running text for some parts of skin."
 msgstr "Diese Option aktiviert den scrollenden Text an einigen Stellen im Skin."
@@ -593,13 +593,13 @@ msgid ""
 "For using Poster, you need a drive as HDD to save the pictures."
 msgstr ""
 "Diese Option aktiviert den Kanalnamen in der Infoleiste.\n"
-"Für die Verwendung von Poster benötigen Sie ein Laufwerk als HDD, um die Bilder zu speichern."
+"FÃ¼r die Verwendung von Poster benÃ¶tigen Sie ein Laufwerk als HDD, um die Bilder zu speichern."
 
 msgid "This option activate/deactive/change the background transparency of skin."
-msgstr "Diese Option aktiviert/deaktiviert/ändert die Hintergrundtransparenz der Haut."
+msgstr "Diese Option aktiviert/deaktiviert/Ã¤ndert die Hintergrundtransparenz der Haut."
 
 msgid "This option activate/deactive/change the weather on top inside the infobar."
-msgstr "Diese Option aktiviert/deaktiviert/ändert das Wetter oben in der Infoleiste."
+msgstr "Diese Option aktiviert/deaktiviert/Ã¤ndert das Wetter oben in der Infoleiste."
 
 msgid ""
 "Here you can insert your city, district, zip code or alltogether.\n"
@@ -607,59 +607,59 @@ msgid ""
 "Press OK to insert your location manually."
 msgstr ""
 "Hier wird deine Stadt, Ortsteil, PLZ oder bunt gemischt eingetragen.\n"
-"Für eine automatische Erkennung vom Standort einfach leer lassen.\n"
-"Für einen manuellen Eintrag auf OK drücken."
+"FÃ¼r eine automatische Erkennung vom Standort einfach leer lassen.\n"
+"FÃ¼r einen manuellen Eintrag auf OK drÃ¼cken."
 
 msgid "Here you can change how often the weather is refreshed in the background."
 msgstr "An dieser Stelle wird der Intervall der Wetteraktualisierung im Hintergrund eingestellt."
 
 msgid "Please select the bordercolor of selection bars or deactivate borders completely."
-msgstr "Bitte wählen Sie die Rahmenfarbe der Auswahlbalken oder deaktivieren Sie die Rahmen ganz."
+msgstr "Bitte wÃ¤hlen Sie die Rahmenfarbe der Auswahlbalken oder deaktivieren Sie die Rahmen ganz."
 
 msgid "Please select the color of lines inside the skin."
-msgstr "Bitte wählen Sie die Farbe der Linien innerhalb der Haut aus."
+msgstr "Bitte wÃ¤hlen Sie die Farbe der Linien innerhalb der Haut aus."
 
 msgid "Please select the color of listselection inside the skin."
-msgstr "Bitte wählen Sie die Farbe der Listenauswahl im Skin aus."
+msgstr "Bitte wÃ¤hlen Sie die Farbe der Listenauswahl im Skin aus."
 
 msgid "Please select the color of progress- and volumebar inside the skin."
-msgstr "Bitte wählen Sie die Farbe der Fortschritts- und Lautstärkeleiste im Skin aus."
+msgstr "Bitte wÃ¤hlen Sie die Farbe der Fortschritts- und LautstÃ¤rkeleiste im Skin aus."
 
 msgid "Please select the color of primary font inside the skin."
-msgstr "Bitte wählen Sie die Farbe der Hauptschrift innerhalb der Skin aus."
+msgstr "Bitte wÃ¤hlen Sie die Farbe der Hauptschrift innerhalb der Skin aus."
 
 msgid "Please select the color of secundary font inside the skin."
-msgstr "Bitte wählen Sie die Farbe der sekundären Schrift im Skin aus."
+msgstr "Bitte wÃ¤hlen Sie die Farbe der sekundÃ¤ren Schrift im Skin aus."
 
 msgid "Please select the color of listselection font inside the skin."
-msgstr "Bitte wählen Sie die Farbe der Listenauswahl-Schriftart im Skin aus."
+msgstr "Bitte wÃ¤hlen Sie die Farbe der Listenauswahl-Schriftart im Skin aus."
 
 msgid "Please select the color of button text inside the skin."
-msgstr "Bitte wählen Sie die Farbe des Schaltflächentextes innerhalb der Skin aus."
+msgstr "Bitte wÃ¤hlen Sie die Farbe des SchaltflÃ¤chentextes innerhalb der Skin aus."
 
 msgid "This option changes the size of picons within the infobar."
-msgstr "Diese Option ändert die Größe der Picons in der Infoleiste."
+msgstr "Diese Option Ã¤ndert die GrÃ¶ÃŸe der Picons in der Infoleiste."
 
 msgid "This option changes the view of channellist."
-msgstr "Diese Option ändert die Ansicht der Kanalliste."
+msgstr "Diese Option Ã¤ndert die Ansicht der Kanalliste."
 
 msgid "This option changes the view of second infobar."
-msgstr "Diese Option ändert die Ansicht der zweiten Infoleiste."
+msgstr "Diese Option Ã¤ndert die Ansicht der zweiten Infoleiste."
 
 msgid "This option changes the view of cover inside from MovieSelection."
-msgstr "Diese Option ändert die Ansicht des Covers im Inneren von MovieSelection."
+msgstr "Diese Option Ã¤ndert die Ansicht des Covers im Inneren von MovieSelection."
 
 msgid "This option changes the view of cover inside from EnhancedMovieCenter."
-msgstr "Diese Option ändert die Ansicht des Covers im Inneren von EnhancedMovieCenter."
+msgstr "Diese Option Ã¤ndert die Ansicht des Covers im Inneren von EnhancedMovieCenter."
 
 msgid "Font normal height in %"
-msgstr "Normale Schrifthöhe in %"
+msgstr "Normale SchrifthÃ¶he in %"
 
 msgid "This option changes the height of normal font."
-msgstr "Diese Option ändert die Höhe der normalen Schriftart."
+msgstr "Diese Option Ã¤ndert die HÃ¶he der normalen Schriftart."
 
 msgid "Font bold height in %"
-msgstr "Fettschrifthöhe in %"
+msgstr "FettschrifthÃ¶he in %"
 
 msgid "This option changes the height of bold font."
-msgstr "Diese Option ändert die Höhe der Fettschrift."
+msgstr "Diese Option Ã¤ndert die HÃ¶he der Fettschrift."
