apply settings for poster

--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/de/LC_MESSAGES/XionHDF.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 23:16+0200\n"
 "PO-Revision-Date: \n"
-"Last-Translator: henrylicious <dende@hdfreaks.cc>\n"
+"Last-Translator: Koivo <koivo@hdfreaks.cc>\n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -590,10 +590,10 @@ msgstr "Diese Option aktiviert den Scrollbalken an einigen Stellen im Skin."
 
 msgid ""
 "This option activates the channelname within the infobar.\n"
-"For using Poster, you need a drive as HDD to save the pictures."
+"The poster will be temporarily saved under temp."
 msgstr ""
 "Diese Option aktiviert den Kanalnamen in der Infoleiste.\n"
-"Für die Verwendung von Poster benötigen Sie ein Laufwerk als HDD, um die Bilder zu speichern."
+"Das Poster wird temporär unter temp abgelegt."
 
 msgid "This option activate/deactive/change the background transparency of skin."
 msgstr "Diese Option aktiviert/deaktiviert/ändert die Hintergrundtransparenz der Haut."
