--- a/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/tr/LC_MESSAGES/XionHDF.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/XionHDF/locale/tr/LC_MESSAGES/XionHDF.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: XionHDF\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-06 23:16+0200\n"
-"PO-Revision-Date: 2017-04-23 04:53+0200\n"
+"PO-Revision-Date: 2023-03-26 10:49+0200\n"
 "Last-Translator: Hasan Kiran <sunder67@hotmail.com>\n"
 "Language-Team: Turkish <sunder67@hotmail.com>\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: tr\n"
-"X-Generator: Lokalize 2.0\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Poedit 3.2.2\n"
 
 msgid "N"
 msgstr "K"
@@ -580,8 +580,8 @@ msgstr ""
 msgid ""
 "Here you can change how often the weather is refreshed in the background."
 msgstr ""
-"Burada, arka planda hava durumunun ne sıklıkla yenilenileceğini"
-" değiştirebilirsiniz."
+"Burada, arka planda hava durumunun ne sıklıkla yenilenileceğini "
+"değiştirebilirsiniz."
 
 msgid "Please select the color of lines inside the skin."
 msgstr "Lütfen arayüzdeki satırların rengini seçin."
@@ -640,7 +640,7 @@ msgstr "zaman kaydırma etkin"
 msgid "A full backup is recommended before the update!"
 msgstr "Güncellemeden önce tam bir yedekleme önerilir!"
 
-msgid "Update recommend"
+msgid "Update recommended"
 msgstr "Güncelleme önerisi"
 
 msgid "No Update!"
@@ -705,8 +705,8 @@ msgstr "İmaj seçmek için sola/sağa basın"
 
 msgid "Press up/down to select Bootoption (Standard/Experimental)"
 msgstr ""
-"Önyükleme Seçeneğini (Standart/Deneysel) seçmek için yukarı/aşağı tuşlarına"
-" basın"
+"Önyükleme Seçeneğini (Standart/Deneysel) seçmek için yukarı/aşağı tuşlarına "
+"basın"
 
 msgid "Console Box"
 msgstr "Konsol kutusu"
@@ -803,4 +803,3 @@ msgstr "şifresiz"
 
 msgid "SysTemp:"
 msgstr "SisSıcaklığı:"
-
